--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -7,6 +7,10 @@
   color: $color-primary;
 }
 
+.text-website-primary {
+  color: $color-website-primary;
+}
+
 .text-secondary {
   color: $color-secondary;
 }
