--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -16,4 +16,8 @@
         color: $color-website-primary;
 
     }
+
+    &--underlined {
+        text-decoration: underline;
+    }
 }
